--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
         }
 
  .Photography-content {
@@ -127,10 +127,12 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
+  border-top: 0.1px solid #fff;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
 }
 
         .Photography-content a {
@@ -191,7 +193,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
         }
 
         .Sport-content {
@@ -204,10 +206,11 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
    }
 
         .Sport-content a {
@@ -268,7 +271,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
                 }
 
         .Education-content {
@@ -281,10 +284,11 @@
   justify-content: center;
   align-items: center;
   background: crimson;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
    }
 
         .Education-content a {
@@ -345,7 +349,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
         }
 
         .Promoter-content {
@@ -358,10 +362,11 @@
   align-items: center;
   z-index: 1;
   background: crimson;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
     }
 
         .Promoter-content a {
@@ -423,7 +428,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
         }
 
         .Contact-content {
@@ -436,10 +441,11 @@
   align-items: center;
   z-index: 1;
   background: crimson;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
  }
 
         .Contact-content a {
@@ -502,7 +508,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
         }
 
         .Community-content {
@@ -515,10 +521,11 @@
   padding: 1px;
   z-index: 1;
   background: crimson;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
    } 
 
         .Community-content a {
@@ -580,7 +587,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
         }
 
         .TikiYiki-content {
@@ -594,10 +601,11 @@
   align-items: center;
   margin-left: 45px;
   background: crimson;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
    }
 
         .TikiYiki-content a {
@@ -658,7 +666,7 @@
             transition: 0.35s ease;
             cursor: pointer;
             color: cyan;
-            background-color: transparent;
+            background-color: crimson;
         }
 
         .Disability-content {
@@ -671,10 +679,11 @@
   justify-content: center;
   align-items: center;
   background: crimson;
+  border-top: 0.1px solid #fff;
   border-bottom: 0.1px solid #fff;
   border-left: 0.1px solid #fff;
   border-right: 0.1px solid #fff;
-  box-shadow: 0.2px 3px 0.25rem 4px rgba(15, 30, 105, 0.994);
+  box-shadow: 0.2px 4px 0.15rem 3px rgba(15, 30, 105, 0.994);
   }
 
         .Disability-content a {
@@ -6387,11 +6396,11 @@ function showSlides(n) {
         Descartes high school in Ouagadougou. 
         He holds a Patent of Undergraduate Studies (P.U.S) called B.E.P.C [Brevet d'Etude du Premier Cycle].
         <br>
-        As a fervent defender of Disability Rights, Gabriel knew he has to stand up and get involved within activities about disablity and corollary matters in implementing his ideas into practical realisations that can positively change lives. That's why he created the Centre PAAS NEERE for EDUCATION in 2006. Ideas are sometimes common even complexe and deep-thinking, but those linked frontally to disability and rights, are focal subjects of interest for Gabriel. 
+        As a fervent defender of Disability Rights, Gabriel has known that he has to stand up and do something to help change the mentalities about disability. He get involved within activities to promote disablity and corollary matters by implementing his ideas into practical realisations that can positively change lives of disabled people. He pioneered to create the Centre PAAS NEERE for EDUCATION in Ziniaré in order to alphabetize disabled adults people in August 2006. Ideas are sometimes common even complexe and deep-thinking, but those that are frontally linked to disability and rights, are main subjects of interest for Gabriel. 
          <br>
           <br>
-        The need to get results in terms of social impacts through communities where disabled people are living, was a huge fuel and has sharpened the dynamism of Gabriel on his desire to make better lives for disabled and orphaned children in Burkina Faso.
-        This is a way to promote, defend and protect Disability Rights and legacies disabled activists have reached, especially the right to get educated and be normally health-carried no matter who you are.
+        The need to get results in terms of social impacts through communities where disabled people are living, was a huge fuel and has sharpened the dynamism of Gabriel and anchored a certain confidence of his Switzerland partners. His desire to make better lives for disabled people especially disabled and orphaned children through his project to improve education galvanized supporters in Burkina Faso and in EUrope.
+        It is a way to promote, defend and protect disabled people and the rights belonging to them. The legacies many disabled people fought for, including activists who won some basic rights like to get educated should be protected.
    
     </p>
         
@@ -6400,7 +6409,7 @@ function showSlides(n) {
           </a> in which he taught disabled and orphaned children but also led several awareness sessions with a focal theme: <b>“Disability and Social Inclusion”</b>.
           <br>
           <br>       
-          In 2007, 2008, 2013, Gabriel went to Europe in order to promote his organisation PAAS NEERE and fundraise money for his projects including to improve education and provide reasonable health care services to disabled people in need. His stays (trips) led him not only to Switzerland like in <a href="https://www.geneve.ch/fr" target="_blank">Geneva</a>, <a href="https://www.sion.ch/" target="_blank"> Sion</a>, <a href="https://www.delemont.ch/" target="_blank">Delemont</a>, <a href="http://www.vendlincourt.ch/" target="_blank"> and Vendlincourt</a> through an impactful collaboration with patners and a network of friends and founding members of<a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> 
+          In 2007, 2008, 2013, Gabriel has toured Europe in order to promote PAAS NEERE and fundraise money for his projects including to improve education and provide reasonable health care services to disabled people in need. His stays (trips) led him not only to Switzerland like in <a href="https://www.geneve.ch/fr" target="_blank">Geneva</a>, <a href="https://www.sion.ch/" target="_blank"> Sion</a>, <a href="https://www.delemont.ch/" target="_blank">Delemont</a>, <a href="http://www.vendlincourt.ch/" target="_blank"> and Vendlincourt</a> through an impactful collaboration of patners and a network of friends, founding members of<a href="https://www.transporthandicap.ch/www/1-accueil" target="_blank"> 
            Transport Handicap in the canton of Valais</a> but also in Germany at<a href=" https://fr.wikipedia.org/wiki/Rastatt" target="_blank"> Rasttat</a> and <a href="https://fr.wikipedia.org/wiki/Kuppenheim" target="_blank"> Kuppenheim</a> in <a href="https://fr.wikipedia.org/wiki/Bade-Wurtemberg" target="_blank"> the lander of Bade-Wurtemberg [Baden-Württemberg] </a> where he host a serie of conferences about PAAS NEERE the organisation of which he was president.
         
          <br>
@@ -6653,8 +6662,6 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
 
 
 
