--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         .navbar {
             display: flex;
             background: rgb(16, 30, 90);
-            height: 58.6px;
+            height: 57px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -85,8 +85,8 @@
         
         .navbar img {
             background: #fff;
-            width: 70px;
-            height: 35px;
+            width: 75px;
+            height: 40px;
             border: 2px solid #fff!important;
             border-radius: 0.2rem;
             margin-top: 1.25rem;
@@ -104,7 +104,7 @@
 
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit; 
@@ -182,7 +182,7 @@
 
         .Sport .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit;
@@ -260,7 +260,7 @@
 
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit;
@@ -338,7 +338,7 @@
 
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit;
@@ -417,7 +417,7 @@
 
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit;
@@ -497,7 +497,7 @@
 
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit;
@@ -575,7 +575,7 @@
 
         .TikiYiki .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit;
@@ -655,7 +655,7 @@
 
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
-            font-size: 17px;
+            font-size: 18px;
             padding: 13.4px 6px;
             color: #b8b8b8;
             background: inherit;
@@ -3850,12 +3850,12 @@ background: #717171;
         }
 
         .disabled{
-            background: #fff;
+            background: #8f8f8f7e;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color: rgb(136, 136, 136);
+            color: #000;
             font-size: 26.25px;
             font-family: 'Kanit';
             width: 100%;
@@ -3864,13 +3864,16 @@ background: #717171;
             padding-left: 10px;
             padding-right: 10px;
             cursor: pointer;
-            border-bottom: 0.45rem solid rgba(205, 209, 214, 0.738);
+            border-radius: 0.5rem;
+            border-bottom: 0.45rem solid crimson;
         }
 
         .disabled:hover{
-            color:red;
-            transition: 0.15s linear;
+            color: #000;
+            transition: 0.2s linear;
             background: #fff;
+            border-radius: 0.5rem;
+            border-bottom: 0.45rem solid #fff;
         }
 
         .read{
@@ -3883,7 +3886,7 @@ background: #717171;
             height: 138px;
             width: auto;
             color: #000;
-            margin-top: 2.45rem;
+            margin-top: 3rem;
         }
 
         .TOPE{
