--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         .Photography .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit; 
             border: none;
@@ -183,7 +183,7 @@
         .Sport .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit;
             border: none;
@@ -261,7 +261,7 @@
         .Education .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit;
             border: none;
@@ -339,7 +339,7 @@
         .Promoter .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit;
             border: none;
@@ -418,7 +418,7 @@
         .Contact .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit;
             border: none;
@@ -498,7 +498,7 @@
         .Community .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit;
             border: none;
@@ -576,7 +576,7 @@
         .TikiYiki .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit;
             margin-left: 45px;
@@ -656,7 +656,7 @@
         .Disability .dropbtn {
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
-            padding: 13.4px 6px;
+            padding: 14.5px 6px;
             color: #b8b8b8;
             background: inherit;
             border: none;
@@ -5175,7 +5175,7 @@ function showSlides(n) {
         <br>
             <br> 
         <b>But how can an inclusive environment be identified (detected) </b>? These are summarily some exploring points 
-        consisting not only to observe and question about how people, in a chosen community, are dealing with inclusion. After these steps the answers and solutions should come as results of obervations and questions.
+        consisting not only to observe and question about how people, in a chosen community, are dealing with inclusion but also how to make inclusiveness more readible and profitable to marginalized people. After these steps, answers and solutions should come as results of obervations and questions.
         </b>
         <br>
         <hr style="color: #858585">
@@ -5183,11 +5183,11 @@ function showSlides(n) {
 <br>
         In a chosen locality (area, region, place, zone, community) one of the simplistic ways to measure the level of INCLUSION is:
         <br>
-        I. To observe and then
+        I. To observe and
         <br>
-        II. To question the diverse behaviors
+        II. To question about some behavings.
         <br>
-        For examples how things are happening about socialization, connections and interactions between people ? Are there many or few people with difference or disabled living ?  
+        For example: In a locality how things are happening about socialization, connections and interactions between people ? Are there many or few people with difference or disabled living ?  
         How the connections, interactions and communications can stand as leverages for people to learn more about inclusion in the locality ? How vulnerable people like elders, 
         disabled people and people with difference are treated ? Do non-disabled people interact with disabled people? How people are interacting between themselves ? In person ? By postal or virtual, online or in other ways ? 
         What is the level of respect and consideration that non-disabled people are having to disabled people ?
@@ -6665,6 +6665,4 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
 
