--- a/index.html
+++ b/index.html
@@ -6037,8 +6037,8 @@ function showSlides(n) {
                         <div class="explanation2">
                             As a physical disabled person who legally made it to Canada, I experienced hardness and challenges on my way and still experiencing them on a daily basis like to reading a list of endless integers in an array. In addition to racism, discrimination and overlooking amongst many other issues for a newcomer, 
                             seeking asylum is a long and difficult process to reach. It matters with hard work, rigor, ponctuality, credibility, optimism and a high level of dose of patience to deal with longer and administrative procedures
-                            fueled by a culture of bureaucracy that can last at least after many years (3-7 years) before getting everything fixed. It's been so tough because
-                            as a newcomer in a new country, I have to embrace a new reality of living in addition to mine in order to have a good integration.
+                            sometimes and in some cases fueled by an impacting and bureaucratic culture that can last at least after many years later (3-7 years) before getting every paper fixed. It's been so tough for me because
+                            as a disabled newcomer in a new country, I have to embrace a new reality of living for a good integration.
                             I had neither parents, nor relatives in Montreal at this time. So I have to find out a way and place to stay. After spending 3 days
                             in my motel room my finances have been hit. Thereby I've had to look for a cheap
                             room to live. But how to do it as a newcomer in one of the coldest countries around the world on an upcoming winter ? Something was sure, I
