--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         .navbar {
             display: flex;
-            background: rgb(16, 30, 90);
+            background: rgb(18, 30, 94);
             height: 57px;
             object-fit: cover;
             z-index: 1;
@@ -106,7 +106,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit; 
             border: none;
         }
@@ -114,7 +114,7 @@
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
         }
 
@@ -184,7 +184,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit;
             border: none;
         }
@@ -192,7 +192,7 @@
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
         }
 
@@ -262,7 +262,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit;
             border: none;
         }
@@ -270,7 +270,7 @@
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
                 }
 
@@ -340,7 +340,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit;
             border: none;
         }
@@ -348,7 +348,7 @@
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
         }
 
@@ -419,7 +419,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit;
             border: none;
         }
@@ -427,7 +427,7 @@
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
         }
 
@@ -499,7 +499,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit;
             border: none;
         }
@@ -507,7 +507,7 @@
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
         }
 
@@ -577,7 +577,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit;
             margin-left: 45px;
             border: none;
@@ -586,7 +586,7 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
         }
 
@@ -657,7 +657,7 @@
             font-family: 'Exo 2', sans-serif;
             font-size: 18px;
             padding: 14.5px 6px;
-            color: #b8b8b8;
+            color: #f4f4f4;
             background: inherit;
             border: none;
         }
@@ -665,7 +665,7 @@
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: cyan;
+            color: yellow;
             background-color: crimson;
         }
 
@@ -2386,7 +2386,7 @@ height: auto;
             box-shadow: 0 6px 0.85rem 6px rgba(6, 11, 45, 0.924);
             color: #000;
             transition: 0.19s ease-in;
-            font-size: 13.5px;
+            font-size: 14px;
         }
 
         .NADO{
@@ -3850,7 +3850,7 @@ background: #717171;
         }
 
         .disabled{
-            background: #8f8f8f7e;
+            background: #d3d3d38f;
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
@@ -3865,7 +3865,7 @@ background: #717171;
             padding-right: 10px;
             cursor: pointer;
             border-radius: 0.5rem;
-            border-bottom: 0.45rem solid crimson;
+            border-bottom: 0.45rem solid rgba(220, 20, 60, 0.588);
         }
 
         .disabled:hover{
