--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         .navbar:hover .Photography:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
         }
 
  .Photography-content {
@@ -192,8 +192,8 @@
         .navbar:hover .Sport:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
         }
 
         .Sport-content {
@@ -270,8 +270,8 @@
         .navbar:hover .Education:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
                 }
 
         .Education-content {
@@ -348,8 +348,8 @@
         .navbar:hover .Promoter:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
         }
 
         .Promoter-content {
@@ -427,8 +427,8 @@
         .navbar:hover .Contact:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
         }
 
         .Contact-content {
@@ -507,8 +507,8 @@
         .navbar:hover .Community:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
         }
 
         .Community-content {
@@ -586,8 +586,8 @@
         .navbar:hover .TikiYiki:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
         }
 
         .TikiYiki-content {
@@ -665,8 +665,8 @@
         .navbar:hover .Disability:hover .dropbtn {
             transition: 0.35s ease;
             cursor: pointer;
-            color: yellow;
-            background-color: crimson;
+            color: #000;
+            background-color: #fff;
         }
 
         .Disability-content {
